# localexpert

./: .gitignore  CLAUDE.md  DataAnalysisPipeline.md  README.md  RetreatExercise.md  SETUP.md  TUTORIAL.md  USAGE.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: data-handling.instructions.md  notebook-conventions.instructions.md  statistical-conventions.instructions.md
.github/prompts/: 01-define-question.prompt.md  02-eda-missingness.prompt.md  03-cleaning-preprocessing.prompt.md  04-statistical-testing.prompt.md  05-psychometrics-reliability.prompt.md  06-survival-analysis.prompt.md  07-power-analysis.prompt.md
data/: bfi.csv  btheb_long.csv  sample_biobehavioral.csv
docs/: vscode-local-llm-workflow-plan.md
notebooks/: analysis_starter.ipynb  phase2.ipynb  phase2_autodetect.ipynb  phase2_qwen35_9b.ipynb  phase2_qwen35_9b_mlx.ipynb  phase7.ipynb  retreat_rossi.ipynb
scripts/: make_bfi_data.py  make_btheb_data.py  make_rossi_data.py  make_sample_data.py  run_power.py  run_retreat.py
skills/02-eda-missingness/: SKILL.md
skills/03-cleaning-preprocessing/: SKILL.md
skills/05-psychometrics-reliability/: SKILL.md
skills/07-power-analysis/: SKILL.md
src/localexpert/: __init__.py  agent.py  cli.py  demo.py  init_cmd.py  kernel.py  references.py  runtime.py  sample_data.py  skills.py  tools.py
src/localexpert/references/: data-handling.md  notebook-conventions.md  statistical-conventions.md
src/localexpert/skills/01-define-question/: SKILL.md
tests/: test_init.py  test_kernel.py  test_references.py  test_skills.py
(+2 files in other folders)
